# shulker-box

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.circleci/: config.yml
.github/workflows/: auto-merge.yml  ci.yml
docker/: .env  Dockerfile  run.sh
shulker_box/: __init__.py  handlers.py  main.py  settings.py
shulker_box/api/: router.py  schemas.py
shulker_box/api/v1/: router.py
shulker_box/api/v1/items/: filters.py  routes.py  schemas.py
shulker_box/database/: client.py  models.py  queries.py
shulker_box/domain/: repositories.py  types.py  types_utils.py
shulker_box/domain/database/: queries.py  repositories.py
shulker_box/domain/events/: incoming.py  outgoing.py
shulker_box/domain/items/: repositories.py  services.py
shulker_box/events/: bus.py  event_types.py  publisher.py
tests/: conftest.py
tests/e2e/: test_items_api.py
tests/unit/: test_event_bus.py
