[tool.poetry]
name = "shulker-box"
version = "0.1.0"
description = "API handling Minecraft items"
authors = ["Tobias <piotr.tobiasz.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.0"
structlog = "^21.5.0"
colorama = "^0.4.4"
environs = "^9.5.0"
uvicorn = { extras = ["standard"], version = "^0.17.4" }
beanie = "^1.8.12"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
wemake-python-styleguide = "^0.16.0"
black = "^22.1"
pyproject-flake8 = "^0.0.1-alpha.2"
pytest = "^7.0.0"
pytest-asyncio = "^0.18.0"
pytest-cov = "^3.0.0"
httpx = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
line_length = 80
profile = "black"
default_section = "THIRDPARTY"
known_first_party = ["shulker_box"]

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "strict"
addopts = "--strict-markers -vv --cache-clear --maxfail=1 --cov=shulker_box --cov-report=term --cov-report=html --cov-branch --cov-fail-under=0 --no-cov-on-fail -p no:warnings"

[tool.flake8]
exclude = ".git,__pycache__,*/static/*,*/migrations/*,*/test_*/"
max-line-length = 80
inline-quotes = '"'
ignore = "WPS115,WPS431,D106,WPS305,WPS110,WPS600,WPS306,D107,B008,WPS404,N812,WPS111"
per-file-ignores = """
    */__init__.py:D104
"""

[tool.coverage.report]
exclude_lines = ["# pragma: no cover", "...  # noqa: WPS428"]
